--- a/src/app/product-detail/product-detail.component.css
+++ b/src/app/product-detail/product-detail.component.css
@@ -1,6 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Gasoek+One&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Kablammo&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Kablammo&display=swap"); */
 
 * {
     margin: 0;
